--- a/pad-framework-master/src/assets/css/pages/schedule.css
+++ b/pad-framework-master/src/assets/css/pages/schedule.css
@@ -164,25 +164,3 @@
     padding-bottom: .5rem;
     color: var(--grey);
 }
-
-.default-schedule-edit-items form {
-    display: flex;
-    flex-direction: column;
-    width: calc(100% / 2.5);
-    padding: 1.5vw;
-}
-
-@media (min-width: 992px) {
-    .default-schedule-edit-items form {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        padding: 1.5vw;
-    }
-
-    .default-schedule-edit-items label input select{
-        padding: 0.5rem 0.5rem 0.5rem 1rem;
-        display: flex;
-        flex-direction: column;
-    }
-}
